css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
header {
  padding-top: 45px;
  align-items: center;
  background-color: #0a22f4;
}
header nav ul {
  display: inline-block;
  list-style: none;
  align-items: end;
}
header li {
  display: inline-block;
}
header a {
  text-decoration: none;
  color: antiquewhite;
  padding-left: 0px;
  padding-right: 20px;
}
header .container {
  width: 1460px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: auto;
}
.logo {
  height: 55px;
  width: auto;
}
nav .kontaqti {
  background: white;
  color: black;
  padding: 18px 43px;
  border-radius: 30px;
  font-weight: 700;
}
.blue {
  background-color: #0a22f4;
}
.white {
  background-color: #ffffff;
}
.lightblue {
  background-color: #425bff;
}
.container {
  max-width: 1460px;
  width: 100%;
}
.jumbotron {
  display: grid;
  grid-template-columns: minmax(400px, 707px) minmax(600px, 948px);
  align-items: center;
  gap: 25px;
  margin-left: auto;
  padding-bottom: 61px;
}
section.home-container {
  padding-top: 115px;
}
.left-img {
  width: 100%;
  border-radius: 10px;
}
.right-img {
  width: 100%;
  border-radius: 10px;
}
.slider {
  margin-top: 41px;
  display: flex;
  justify-content: space-between;
}
.circles div {
  margin-right: 15px;
  display: inline-block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
}
.arrows,
.arrows a {
  display: inline-block;
}
.arrows a {
  text-decoration: none;
}

